[package]
name = "ucl"
version = "0.1.1"
description = "Rust bindings to libucl"
documentation = "http://lukasz.niemier.pl/ucl-rs"
authors = ["Łukasz Niemier <lukasz@niemier.pl>"]
license-file = "LICENSE"
repository = "https://github.com/hauleth/ucl-rs"

[features]
default = []
nightly = [] # in case of nightly build

[dependencies]
libucl-sys = "*"
libc = "*"
